tests/rosetta/out/Smalltalk/continued-fraction.out
/tmp/continued-fraction.st:7: parse error, expected ']'
