tests/rosetta/out/Smalltalk/continued-fraction.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| newTerm cfSqrt2 f n cfNap cfPi g real r i main |
newTerm := [:a :b | Dictionary from:{'a'->a. 'b'->b}. ].
cfSqrt2 := [:nTerms | f := {}.
n := 0.
[(n < nTerms)] whileTrue: [.
f := f copyWith: newTerm value: 2 value: 1.
n := (n + 1).
].
.
((nTerms > 0)) ifTrue: [
f at: 0 at: 'a' put: 1.
] .
f. ].
cfNap := [:nTerms | f := {}.
n := 0.
[(n < nTerms)] whileTrue: [.
f := f copyWith: newTerm value: n value: (n - 1).
n := (n + 1).
].
.
((nTerms > 0)) ifTrue: [
f at: 0 at: 'a' put: 2.
] .
((nTerms > 1)) ifTrue: [
f at: 1 at: 'b' put: 1.
] .
f. ].
cfPi := [:nTerms | f := {}.
n := 0.
[(n < nTerms)] whileTrue: [.
g := (((2 * n)) - 1).
f := f copyWith: newTerm value: 6 value: (g * g).
n := (n + 1).
].
.
((nTerms > 0)) ifTrue: [
f at: 0 at: 'a' put: 3.
] .
f. ].
real := [:f | r := 0.
i := (((f size)) - 1).
[(i > 0)] whileTrue: [.
r := ((f at: i at: 'b' asFloat) / (((f at: i at: 'a' asFloat) + r))).
i := (i - 1).
].
.
((((f size)) > 0)) ifTrue: [
r := (r + (f at: 0 at: 'a' asFloat)).
] .
r. ].
main := [ Transcript show: ((('sqrt2: ') + ((real value: cfSqrt2 value: 20 asString)))) printString; cr.
Transcript show: ((('nap:   ') + ((real value: cfNap value: 20 asString)))) printString; cr.
Transcript show: ((('pi:    ') + ((real value: cfPi value: 20 asString)))) printString; cr. ].
main value.
